Fix scrolling issue on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,21 +22,12 @@
 
 html,
 body {
-  font-family: 'Argesta Display', -apple-system, BlinkMacSystemFont,
-    Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
-    Helvetica Neue, serif;
+  font-family: 'Argesta Display', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
+    Fira Sans, Droid Sans, Helvetica Neue, serif;
   user-select: none;
   background-color: #fefefe;
   color: #272623;
   overflow-x: hidden;
-}
-
-html {
-  min-height: 100%;
-}
-
-body {
-  height: 100vh;
 }
 
 a {
